Bug 897488 - Apply any dirt on frames whenever we get a drawable frame, not just in Draw(). r=seth

--HG--
extra : rebase_source : f4b9e2ccded3844e9384e6f8eb7a801b5e25105d